--- a/templates/main.html
+++ b/templates/main.html
@@ -4,9 +4,16 @@
 
 <body>
    {% include 'navbar.html' %} 
-   {% block content %}
+   {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% block content %}
 
 
-   {% endblock %}
+    {% endblock %}
 
 </body>
