--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -37,7 +37,7 @@
              <a href="{% url 'update-recipe' recipe.id  %}">Edit recipe</a>
              <a href="{% url 'delete-recipe' recipe.id  %}">Delete recipe</a>
             {% endif %}
-             <h5>{{recipe.id}} -- {{recipe.name}}</h5>
+             <h5>{{recipe.id}} -- <a href="/recipe/{{recipe.id}}"> {{recipe.name}}</a></h5>
          </div>
          {% endfor %}
         </div>
