--- a/base/templates/base/recipe.html
+++ b/base/templates/base/recipe.html
@@ -8,7 +8,30 @@
 <div class="comment-wrapper">
     <h3>Comments</h3>
     <hr>
+
+    {% for comment in recipe_comment %}
+    <div>
+    {%  if request.user == comment.user %}
+    <a href="{% url 'delete-comment' comment.id %}">Delete</a>
+    {% endif %}
+    <small>@{{comment.user}} {{comment.created|timesince}} ago</small>
+    <p>{{comment.body}}</p>
+
+
+    </div>
+
+    {% endfor %}
+
 </div>
 
+{% if request.user.is_authenticated %}
+<div class="comment-form">
+    <form method="POST" action="">
+        {% csrf_token %}
+        <input type="text" name="body" placeholder="Comment here...">
+    </form>
+
+</div>
+{% endif  %}
 
 {% endblock %}
