--- a/base/templates/base/recipe_creation.html
+++ b/base/templates/base/recipe_creation.html
@@ -2,7 +2,7 @@
 
 <div>
 
-<form method="POST" action="">
+<form method="POST" action="" enctype="multipart/form-data">
 
      {% csrf_token %}
      {{form.as_p}}
