--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -28,7 +28,7 @@
     </div>
     
     <div>
-        <a href="{% url 'create-recipe'  %}">Create recipe</a>
+        <a href="{% url 'create_recipe'  %}">Create recipe</a>
         <div>
      
          {% for recipe in recipes %}
