--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -32,7 +32,7 @@
 
     </form>
     <p>Already a chef?</p>
-    <a href="{% url 'login' %}">Login</a>
+    <a>">Login</a>
 </div>
 {% endif %}
 {% endblock content %}
