--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,13 +2,13 @@
     <h1>Boze uzmi me</h1>
 </a>
 
-<form method="GET" action="{%url 'home'%}">
+<form method="GET" action="{%url 'index'%}">
     <input type="text" name="q" placeholder="Search Recipes..."/ >
 </form>
 
 {% if request.user.is_authenticated %}
 <p>Hello {{request.user}}</p>
-<a href="{% url 'logout' %}">Logout</a>
+<a>Logout</a>
 {% else %}
-<a href="{% url 'login' %}" >Login</a>
+
 {% endif %}
